--- a/ioteca_web/ioteca_web_apps/reporte_web/views/mision/index.html
+++ b/ioteca_web/ioteca_web_apps/reporte_web/views/mision/index.html
@@ -4,8 +4,8 @@
             <md-card ng-controller="LogCtrl">
                 <md-card-title>
                     <md-card-title-text>
-                        <span class="md-headline">Revisión de archivos log</span>
-                        <span class="md-subhead">logs del {{ query | date:'yyyy-MM-dd'}} </span>
+                        <span class="md-headline">Mision</span>
+                        <span class="md-subhead">Mision del {{ query | date:'yyyy-MM-dd'}} </span>
                     </md-card-title-text>
                 </md-card-title>
                 
@@ -35,14 +35,18 @@
                         <md-divider></md-divider>
                         <thead  md-on-reorder="onReorder">
                             <tr>
-                                <th>#</th>
-                                <th >hora</th>
-                                <th >type</th>
-                                <th>desc</th>
-                                <th>ip</th>
-                                <th>user</th>
-                                <th>method</th>
-                                <th>mod:line</th>
+                               <th>N°</th>
+                                <th>Perfil</th>
+                                <th>DNI</th>
+                                <th>Apellidos</th>
+                                <th>Nombres</th>
+                                <th>Peso</th>
+                                <th>Talla</th>
+                                <th>IMC</th>
+                                <th>Presion Arterial</th>
+                                <th>Frecuencia Cardiaca</th>
+                                <th>Diagnostico</th>
+                                <th>Fecha y Hora</th>
                                 
                             </tr>
                         </thead>
