--- a/ioteca_web/ioteca_web_apps/catalogo_web/views/autores/index.html
+++ b/ioteca_web/ioteca_web_apps/catalogo_web/views/autores/index.html
@@ -8,7 +8,7 @@
                     </md-card-avatar>
                     <md-card-header-text>
                         <span class="md-headline">Autors</span>
-                        <span class="md-subhead">Trabajar con autores</span>
+                        <span class="md-subhead">Trabajar con autoresh</span>
                     </md-card-header-text>
                 </md-card-header>
                 <md-divider></md-divider>
