--- a/ioteca_web/ioteca_web_apps/mantenimiento_web/views/tests/trabajador.html
+++ b/ioteca_web/ioteca_web_apps/mantenimiento_web/views/tests/trabajador.html
@@ -1,91 +1,90 @@
+
+<md-content class="md-padding style1" layout-xs="column" layout="row">
+<div flex-xs flex-gt-xs="100" layout="column">
 <div ng-cloak>
     <md-content class="md-padding" layout-xs="column" layout="row">
         <div flex-xs flex-gt-xs="100" layout="column">
-            <md-card ng-controllerx="CategoriaCtrl">
+            <md-card ng-controllerx="DashboardSaveCtrl">
                 <md-card-header>
-                   
-                    <md-card-header-text>
-                        <span class="md-headline este">Trabajador</span>
                     
+                    <md-card-header-text class="style2" >
+                        <span class="md-headline este">Trabajador</span>
+                        <md-card-avatar>
+                        <img class="md-user-avatar style4" src="media/img/list/Logo-Colegio-Enfermería-200x200.png" />
+                    </md-card-avatar>
+                       
                     </md-card-header-text>
 
-                </md-card-header>
+                </md-card-header> <br>
+
                 <md-divider></md-divider>
                 
-     <!-- esto son los buscadoress -->
-                
-                            
-                           
-                           
-
-                        
-
-                       
-
-       <!-- esto son los buscadoress -->     
-                         <md-card-actions layout="row" layout-align="start center" >
-                             <md-card-icon-actions>
-                                
-                                <md-input-container class="md-block md-search style5">
-                                    <input placeholder="Buscar por DNI" ng-model="query" ng-keyup="buscar()">
-                                </md-input-container>
-                                 
-                               
-      
-
-
-                            </md-card-icon-actions>
+     <!-- esto es el general -->
+                <md-card-actions layout="row" layout-align="start center" >
                             
                            
                             <md-card-icon-actions>
-                                
+                                 <md-input-container class="md-block md-search style3">
+                                   <input placeholder="Apellidos" ng-model="Apellidos" ng-keyup="buscar(Apellidos)">
+                                </md-input-container>
+                            </md-card-icon-actions><br>
+
+
+                            <md-card-icon-actions>
                                 <md-input-container class="md-block md-search style3">
-                                    <input placeholder="Buscar por Nombre" ng-model="query" ng-keyup="buscar()">
+                                    <input placeholder="Nombre" ng-model="Nombre" ng-keyup="buscar(Nombre)">
                                 </md-input-container>
-                                 
-                                
-      
-
-
-                            </md-card-icon-actions>
-                            <md-card-icon-actions>
-                                
-                                <md-input-container class="md-block md-search">
-                                    <input placeholder="Buscar por Apellidos" ng-model="query" ng-keyup="buscar()">
-                                </md-input-container>
-                                
-                               
-      
-
-
                             </md-card-icon-actions>
 
-                        </md-card-actions><br> 
-                        
- <section layout="row" layout-sm="column" layout-align="center center" layout-wrap >
-                        <md-button class="md-raised md-primary style1 " ng-click="save()"><ng-md-icon icon="search" class="style4 " aria-label="title"></ng-md-icon> Buscar</md-button> </left> 
 
-                          <md-button class="md-raised md-primary  style2 " ng-click="save()"> <ng-md-icon icon="add" class="style4" aria-label="title"></ng-md-icon> Agregar Paciente</md-button>
-                           </section><br>
-                           <md-divider></md-divider>
+                             <md-card-icon-actions>
+                                <md-input-container class="md-block md-search style3">
+                                    <input placeholder="DNI" ng-model="DNI" ng-keyup="buscar(DNI)">
+                                </md-input-container>
+                            </md-card-icon-actions>
+
+
+
+                        </md-card-actions>
+
+
+
+                
+
+
+                                    <md-divider></md-divider>
+
+
+                    <md-card-actions layout="row" layout-xs="column" layout-align="start center">
+                        <md-card-icon-actions>
+
                            
+                        </md-card-icon-actions>
+                        <md-button type="reset" ng-click="cancel()" class="md-raised">BUSCAR</md-button>
+                        <md-button type="submit" ng-click="save()" class="md-raised md-primary">
+                            <span ng-show="autor.id == null">NUEVO</span>
+                            <span ng-show="autor.id">Update</span>
+                        </md-button>
 
-                         <table table-responsive>
-                        
-                        <md-progress-linear layout-fill md-mode="indeterminate" ng-hide="!isLoading"></md-progress-linear>
-                        <thead md-on-reorder="onReorder">
+                    </md-card-actions>
+                    <md-divider></md-divider>
+
+                    <table table-responsive>
+                        <md-divider></md-divider>
+                     
+                        <thead md-on-reorder="onReorder style7">
                             <tr>
                                 <th>#</th>
-                                 <th class="col-hidden" data-order="nombre_apellido">nombre y apellidos</th>
-                                 <th class="col-hidden" data-order="cargo">cargo</th>
-                                 <th class="col-hidden" data-order="dni">DNI</th>
-                                 <th class="col-hidden" data-order="dr_atiende">Dr.Atiende</th>
-                                 <th class="col-hidden" data-order="especialdidad">Especialdidad</th>
-                                 
+                                 <th class="col-hidden style7" data-order="codigo">Codigo</th>
+                                 <th class="col-hidden style7" data-order="nombre">Nombre</th>
+                                 <th class="col-hidden style7" data-order="nombre">Apellidos</th>
+                                 <th class="col-hidden style7" data-order="nombre">Categoria</th>
+                                 <th class="col-hidden style7" data-order="nombre">Direcion</th>
+                                 <th class="col-hidden style7" data-order="nombre">Telefono</th>
 
 
                                 
-                                <th colspan="2" class="align-options">acciones</th>
+                                <th colspan="2" class="align-options style7">Acciones</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -111,41 +110,55 @@
                     </table>
 
 
-                        <!-- ffff -->
-                        
-               
             </md-card>
         </div>
     </md-content>
 </div>
+    <md-card-content>
+</div>
+
+                                        <!-- ffff -->
+
 <style>
+
 .este {
     text-align: center;
+
+}
+.style1 {
+    
+background: #81F7D8;
+right:0%;
+
 }
 .style2 {
-    margin-left: 20%;
-     
+    
+     background:#CEE3F6;
     
 }
 .style3 {
-    margin-left: 10%;
-     
+    margin-left: 20%;
+     background: #E0E6F8;
     
 }
+
 .style4 {
-    background-color: skyblue;
-
+    width:60px;
+    background-color:#F2F2F2;
 }
+
 .style5 {
-    margin-left: 20%;
+    width:60px;
+  background-color:#F6CEEC;
 }
 
+.style6 {
 
-
-
-
-
-
-
-
+    width:80px;
+  background-color:#58FAAC;
+  border: ridge;
+}
+.style7 {
+   background: #D0A9F5;
+}
 </style>
