--- a/ioteca_web/ioteca_web_apps/reporte_web/views/upeu/index.html
+++ b/ioteca_web/ioteca_web_apps/reporte_web/views/upeu/index.html
@@ -1,163 +1,125 @@
+
+<md-content class="md-padding style1" layout-xs="column" layout="row">
+<div flex-xs flex-gt-xs="100" layout="column">
 <div ng-cloak>
     <md-content class="md-padding" layout-xs="column" layout="row">
         <div flex-xs flex-gt-xs="100" layout="column">
             <md-card ng-controllerx="DashboardSaveCtrl">
                 <md-card-header>
-                    <md-card-avatar>
-                        <img class="md-user-avatar style5" src="media/img/list/logo.png" />
+                    
+                    <md-card-header-text class="style2" >
+                        <span class="md-headline este">UPeU</span>
+                        <md-card-avatar>
+                        <img class="md-user-avatar style2" src="media/img/list/upeu-logo.jpg" />
                     </md-card-avatar>
-                    <md-card-header-text>
-                        <span class="md-headline este">BUSCAR PACIENTES</span>
                        
                     </md-card-header-text>
 
                 </md-card-header> <br>
+
                 <md-divider></md-divider>
                 
-     <!-- esto son los buscadoress -->
+      <!-- esto son los buscadoress -->
                 <md-card-actions layout="row" layout-align="start center" >
-                            
+
+
+                             <!-- input desplegable --> 
+
                            
                             <md-card-icon-actions>
-                                
-                               <!-- input desplegable --> 
-            
-                                
                                  <md-input-container class="md-block md-search style3">
-                                    <input placeholder="Buscar " ng-model="query" ng-keyup="buscar()">
+                                    <input placeholder="FIA" ng-model="query" ng-keyup="buscar()">
                                 </md-input-container>
-      
-
-
                             </md-card-icon-actions>
+
 
                             <md-card-icon-actions>
-                                
-                                <md-input-container class="md-block md-search">
-                                    <input placeholder="Buscar por codigo" ng-model="query" ng-keyup="buscar()">
+                                <md-input-container class="md-block md-search style3">
+                                    <input placeholder="FCE" ng-model="query" ng-keyup="buscar()">
                                 </md-input-container>
-                                 
-                               
-      
-
-
                             </md-card-icon-actions>
+
+
+                            <md-card-icon-actions>
+                                <md-input-container class="md-block md-search style3">
+                                    <input placeholder="FACIHED" ng-model="query" ng-keyup="buscar()">
+                                </md-input-container>
+                            </md-card-icon-actions>
+
 
                         </md-card-actions>
                 
-       <!-- esto son los buscadoress -->     
+                         <!-- esto son los buscadoress -->       
+
+
                          <md-card-actions layout="row" layout-align="start center" >
                             
-                           
+
                             <md-card-icon-actions>
-                                
                                 <md-input-container class="md-block md-search style3">
-                                    <input placeholder="Buscar por DNI" ng-model="query" ng-keyup="buscar()">
+                                <input placeholder="FCE SALUD" ng-model="query" ng-keyup="buscar()">
                                 </md-input-container>
-                                 
-                                
-      
-
-
                             </md-card-icon-actions>
+
+
                             <md-card-icon-actions>
-                                
-                                <md-input-container class="md-block md-search">
-                                    <input placeholder="Buscar po apellidos" ng-model="query" ng-keyup="buscar()">
+                                <md-input-container class="md-block md-search style3">
+                                <input placeholder="POSGRADO" ng-model="query" ng-keyup="buscar()">
                                 </md-input-container>
-                                
-                               
-      
-
-
                             </md-card-icon-actions>
 
-                        </md-card-actions><br>
 
- <section layout="row" layout-sm="column" layout-align="center center" layout-wrap class="e">
-                        <md-button class="md-raised md-primary style1" ng-click="save()"><ng-md-icon icon="search" class="style4"style4 aria-label="title"></ng-md-icon> Buscar</md-button> </left>
-                          <md-button class="md-raised md-primary  style2" ng-click="save()"> <ng-md-icon icon="add" class="style4"style4 aria-label="title"></ng-md-icon> Agregar Paciente</md-button>
-                           </section><br>
-                         <table table-responsive>
-                        <md-divider></md-divider>
-                     
-                        <thead md-on-reorder="onReorder">
-                            <tr>
-                                <th>#</th>
-                                 <th class="col-hidden" data-order="codigo">codigo</th>
-                                 <th class="col-hidden" data-order="nombre">nombre</th>
-                                 <th class="col-hidden" data-order="nombre">apellidos</th>
-                                 <th class="col-hidden" data-order="nombre">categoria</th>
-                                 <th class="col-hidden" data-order="nombre">Direcion</th>
-                                 <th class="col-hidden" data-order="nombre">telefono</th>
+                        </md-card-actions><br> 
+                            
 
 
-                                
-                                <th colspan="2" class="align-options">acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="d in lista">
-                                <td> {{ $index + 1 }} </td>
-                                <td> {{ d.nombre }} </td>
-                                <td> {{ d.codigo }} </td>
-                                <td> {{ d.estado }} </td>
-                                <td>
-                                    <md-button class="md-icon-button md-td" aria-label="Edit" ui-sref="catalogo.catalogo.categoriasEdit({id:d.id})">
-                                        <md-tooltip md-autohide>Edit {{ d.codename }}</md-tooltip>
-                                        <ng-md-icon  size="24" icon="edit" aria-label="Edit"></ng-md-icon>
-                                    </md-button>
-                                </td>
-                                <td>
-                                    <md-button class="md-icon-button md-td" aria-label="delete" ng-click="delete(d)">
-                                        <md-tooltip md-autohide>Delete {{ d.codename }}</md-tooltip>
-                                        <ng-md-icon  size="24" icon="delete" aria-label="delete"></ng-md-icon>
-                                    </md-button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+
+ <md-divider></md-divider>
+                    <md-card-actions layout="row" layout-xs="column" layout-align="start center">
+                        <md-card-icon-actions>
+                            <md-button class="md-icon-button" aria-label="toggle">
+                                <md-icon md-svg-icon="md-toggle-arrow"></md-icon>
+                            </md-button>
+                        </md-card-icon-actions>
+                        <md-button type="reset" ng-click="cancel()" class="md-raised">Cancel</md-button>
+                        <md-button type="submit" ng-click="save()" class="md-raised md-primary">
+                            <span ng-show="autor.id == null">Guardar</span>
+                            <span ng-show="autor.id">Update</span>
+                        </md-button>
+                    </md-card-actions>
 
 
-                        <!-- ffff -->
-                        
-               
             </md-card>
         </div>
     </md-content>
 </div>
+    <md-card-content>
+</div>
+
+                                        <!-- ffff -->
+
 <style>
+
 .este {
     text-align: center;
 
 }
 .style1 {
     
-    margin-right: 30%;
+background: #CED8F6;
+right:0%;
 
-    
 }
 .style2 {
-    margin-right: 20%;
-     
+   
+      width:80px;
+  background-color:#8258FA;
+  border: ridge;
     
 }
 .style3 {
     margin-left: 20%;
-     
+     background: #E0E6F8;
     
 }
-
-.style4 {
-    background-color: skyblue;
-}
-
-.style5 {
-    width:60px;
-
-
-
-
-
-
 </style>
